--- a/app/views/themes/bioart/home/_about.html.haml
+++ b/app/views/themes/bioart/home/_about.html.haml
@@ -1,6 +1,6 @@
 .about{style: "background: url(#{@about.background.url}) center/cover no-repeat;"}
   .row
-    .small-12.columns
+    .small-10.small-centered.medium-12.columns
       .heading About
       
       .text
