--- a/app/views/themes/bioart/home/_ars_bioarctica.html.haml
+++ b/app/views/themes/bioart/home/_ars_bioarctica.html.haml
@@ -1,10 +1,10 @@
 .ars_bioarctica_front{style: "background: url(#{@ars.background.url}) repeat;"}
   .row
-    .small-12.columns.section_title
+    .small-10.small-centered.medium-12.columns.section_title
       %span.white ARS
       Bioarctica
   .row
-    .small-12.columns.medium-11.medium-centered
+    .small-10.columns.medium-11.small-centered
       .ars_image
         = image_tag @ars.image.url
       .ars_content
