--- a/app/views/themes/bioart/home/_projects.html.haml
+++ b/app/views/themes/bioart/home/_projects.html.haml
@@ -1,16 +1,16 @@
 .featured_projects
   .row
-    .small-12.columns.section_title
+    .small-10.small-centered.medium-12.columns.section_title
       %span.featured Featured
       Projects
       
   .row
-    .small-12.columns.medium-11.medium-centered
+    .small-10.columns.medium-11.small-centered
       - @projects.each do |project|
         .row.project[project]
-          .small-6.medium-2.project_icon.columns
+          .small-12.medium-2.project_icon.columns
             = image_tag project.image.url(:box)
-          .small-6.medium-10.project_content.columns
+          .small-12.medium-10.project_content.columns
             .title= project.name
             .years= project.year_range
             .description= project.description
