--- a/app/views/themes/bioart/layouts/application.html.haml
+++ b/app/views/themes/bioart/layouts/application.html.haml
@@ -37,5 +37,7 @@
                 %li= link_to 'Projects', '#'
                 %li= link_to 'Contact', page_path('contact')
     = yield
+    %footer
+      stuff to go here
     :javascript
       $(document).ready(function() { #{yield :jquery}  });
