--- a/app/views/themes/bioart/layouts/application.html.haml
+++ b/app/views/themes/bioart/layouts/application.html.haml
@@ -24,10 +24,11 @@
     %header
       .pattern
         .row
-          .logo.medium-2.columns.small-12
-            the
-            BIOART
-            SOCIETY
+          = link_to '/' do
+            .logo.medium-2.columns.small-12
+              the
+              BIOART
+              SOCIETY
           .title-bar.medium-8.columns.small-12
             .title-bar-left
               %ul.horizontal.menu
