--- a/app/assets/themes/bioart/stylesheets/base.css.scss
+++ b/app/assets/themes/bioart/stylesheets/base.css.scss
@@ -42,7 +42,13 @@ header {
           
           text-transform: uppercase;
         }
+        &:hover {
+          a {
+            color: $fuschia;
+          }
+        }
       }
+      
       
     }
   }
