--- a/app/views/themes/bioart/posts/_postspage.html.haml
+++ b/app/views/themes/bioart/posts/_postspage.html.haml
@@ -1,7 +1,7 @@
 
 - @posts.each do |post|
   .post.column
-    .post_image{style: "background: url(#{post.photos.empty? ? current_theme_image_path('placeholder.png') : post.photos.first.image.url(:box).gsub('development', 'production')}) center/cover no-repeat"}
+    .post_image{style: "background: url(#{post.photos.empty? ? theme_image_path('placeholder.png') : post.photos.first.image.url(:box).gsub('development', 'production')}) center/cover no-repeat"}
       .hashtag
         = "##{post.node.name}"
     .post_content
