--- a/app/views/themes/bioart/posts/index.html.haml
+++ b/app/views/themes/bioart/posts/index.html.haml
@@ -2,7 +2,7 @@
   .row
     .small-10.small-centered.medium-12.columns.section_title
       News
-  .row.small-up-1.medium-up-2.xxlarge-up-3#results= render partial: 'postspage'
+  .row.small-up-1.medium-up-2.large-up-3#results= render partial: 'postspage'
  
 
 = content_for :jquery do
