--- a/app/assets/themes/bioart/stylesheets/application.css.scss
+++ b/app/assets/themes/bioart/stylesheets/application.css.scss
@@ -14,6 +14,7 @@
  *= require bioart/stylesheets/foundation_and_overrides
  *= require bioart/stylesheets/base
  *= require bioart/stylesheets/homepage
+ *= require bioart/stylesheets/pages
  *= require bioart/stylesheets/posts
  *= require slick
  *= require jquery-ui
