--- a/app/views/themes/bioart/layouts/application.html.haml
+++ b/app/views/themes/bioart/layouts/application.html.haml
@@ -32,7 +32,7 @@
             .title-bar-left
               %ul.horizontal.menu
                 %li= link_to 'News', posts_path
-                %li= link_to 'About', page_path('about')
+                %li= link_to 'About', '/about'
                 %li= link_to 'ARS Bioarctica', page_path('ars-bioarctica')
                 %li= link_to 'Projects', '#'
                 %li= link_to 'Contact', page_path('contact')
