--- a/app/views/themes/bioart/home/_ars_bioarctica.html.haml
+++ b/app/views/themes/bioart/home/_ars_bioarctica.html.haml
@@ -9,3 +9,5 @@
         = image_tag @ars.image.url
       .ars_content
         = raw @ars.body
+        .side_links
+          .side_link= link_to 'Apply to the residency', '#'
