--- a/app/views/themes/bioart/home/_contact.html.haml
+++ b/app/views/themes/bioart/home/_contact.html.haml
@@ -4,7 +4,7 @@
       .text
         .red Contact
         .address
-          %strong Office and postal address
+          .heading Office and postal address
           %p
             Suomen Biotaiteen Seura ry / Finnish Bioart Society
             %br/
@@ -13,6 +13,6 @@
             FI-00540 Helsinki
             %br/
             %br/
-            info[at]bioartsociety[dot]fi
+            %em info[at]bioartsociety[dot]fi
         .side_links
           .side_link= link_to 'Send us an email', '#'
