--- a/app/assets/themes/bioart/stylesheets/base.css.scss
+++ b/app/assets/themes/bioart/stylesheets/base.css.scss
@@ -59,4 +59,21 @@ header {
 footer {
   background: $headerblue url(/assets/bioart/images/layout/header_pattern.png) repeat;
   min-height: 7.5rem;
+  padding: 2rem 0;
+  .form {
+
+    input[type=text] {
+      float: left;
+      padding-left: 20px;
+      background:  url(/assets/bioart/images/layout/mag_glass.png) no-repeat 2px center , url(/assets/bioart/images/layout/menubar_arrow_blk.png) no-repeat right center #66ffcc;
+    }
+   }
+  .icons {
+    .email, .fb, .twitter {
+      float: left;
+      img {
+        padding: 0 0.4rem;
+      }
+    }
+  }
 }
