--- a/app/assets/themes/bioart/stylesheets/homepage.css.scss
+++ b/app/assets/themes/bioart/stylesheets/homepage.css.scss
@@ -53,7 +53,7 @@
     }
   }
   
-  .post {
+  a.post {
     .post_image {
       overflow: hidden;
       height: 392px;
@@ -78,11 +78,13 @@
         line-height: 1.25em;
         font-weight: bold;
         margin-bottom: 1em;
+        color: #000;
       }
       .excerpt, .excerpt p {
         font-family: $titillium;
         font-size: 1.246rem;
         line-height: 1.25em;
+        color: #000;
       }
     }
   }
@@ -158,7 +160,7 @@
         background-color: #000;
         background: black url(/assets/bioart/images/layout/menubar_arrow.png)  0.4em no-repeat;
 
-        padding: 1em 0.7em 1em 2em;
+        padding: 0.5rem 0.4em 0.5em 1.8em;
         a {
           text-transform: uppercase;
           color: #C5C5C5;
@@ -195,7 +197,7 @@
   .ars_content {
     background-color: white;
     margin-bottom: 5rem;
-    padding: 1.875em 2.625em;
+    padding: 1.875em 0.625em 5rem 2.625rem;
     h2 {
       font-family: $titillium;
       font-size: 1.914rem;
@@ -210,7 +212,31 @@
       line-height: 1.8rem;
     }
 
-  
+    .side_links {
+      position: relative;
+      left: 96%;
+      margin-top: -6%;
+      @include breakpoint(small only) {
+        left: initial;
+        margin-top: initial;
+      }
+      .side_link {
+        float: left;
+        clear: both;
+        margin-bottom: 1em;
+        background-color: #000;
+        background: black url(/assets/bioart/images/layout/menubar_arrow.png)  0.4em no-repeat;
+
+        padding: 0.5rem 0.4em 0.5em 1.8em;
+        a {
+          text-transform: uppercase;
+          color: #C5C5C5;
+          &:hover {
+            color: #FFF;
+          }
+        }
+      }
+    }
   }
 }
 .featured_projects {
@@ -233,7 +259,7 @@
     }
   }
   .project {
-    height: 200px;
+    height: 152px;
     @include breakpoint(small only) {
       height: initial;
     }
@@ -242,7 +268,7 @@
       padding: 0;
       background-color: white;
       img {
-        height: 200px;
+        height: 152px;
         width: auto;
         @include breakpoint(small only) {
           width: 100%;
@@ -251,24 +277,25 @@
       }
     }
     .project_content {
-      height: 200px;
+      height: 152px;
       @include breakpoint(small only) { 
         height: initial;
       }
       font-family: $titillium;
       background-color: white;
       opacity: 0.9;
-      padding: 1.5em 3em;
+      padding: 1rem;
       .title {
-        font-size: 1.914em;
+        font-size: 1.614em;
       }
       .year {
-        font-size: 1rem;
+        font-size: 0.8rem;
+        font-style: italic;
       }
       .description, .description p {
         font-size: 1rem;
         font-weight: normal;
-        line-height: 1.8rem;
+        line-height: 1.4rem;
       }
     }
   }
@@ -301,9 +328,15 @@
     .address {
       margin-bottom: 5.375rem;
       padding: 5.347rem 2rem 3.347rem;
+      .heading {
+        font-weight: bold;
+        font-size: 1.25rem;
+        line-height: 1.8rem;
+        font-family: $titillium;
+      }
       p {
         font-size: 1.25rem;
-        font-weight: bold;
+        font-weight: normal;
         font-family: $titillium;
         line-height: 1.8rem;
       }
@@ -325,7 +358,7 @@
         background-color: #000;
         background: black url(/assets/bioart/images/layout/menubar_arrow.png)  0.4em no-repeat;
 
-        padding: 1em 0.7em 1em 2em;
+        padding: 0.5rem 0.4em 0.5em 1.8em;
         a {
           text-transform: uppercase;
           color: #C5C5C5;
