application form in place

--- a/app/assets/themes/bioart/stylesheets/_settings.scss
+++ b/app/assets/themes/bioart/stylesheets/_settings.scss
@@ -61,7 +61,7 @@ $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
 $black: #0a0a0a;
 $white: #fefefe;
-$body-background: $white;
+$body-background: #f7f7f6;
 $body-font-color: $black;
 $body-font-family: Helvetica, Roboto, Arial, sans-serif;
 $body-antialiased: true;
