--- a/app/assets/themes/bioart/stylesheets/application.css.scss
+++ b/app/assets/themes/bioart/stylesheets/application.css.scss
@@ -15,6 +15,7 @@
  *= require bioart/stylesheets/base
  *= require bioart/stylesheets/homepage
  *= require bioart/stylesheets/pages
+ *= require bioart/stylesheets/opencall
  *= require bioart/stylesheets/posts
  *= require slick
  *= require jquery-ui
