--- a/app/views/themes/bioart/admin/calls/_form.html.haml
+++ b/app/views/themes/bioart/admin/calls/_form.html.haml
@@ -32,6 +32,8 @@
           .medium-8.small-12.columns= ff.input :hint
           .small-8.columns.medium-3= ff.input :question_type, as: :select, collection: ['string', 'text', 'file', 'boolean', 'group_select']
           .small-4.columns.medium-1= ff.input :required, as: :boolean
+        .row
+          .small-12.columns.medium-8= ff.input :char_limit, label: 'Character limit?', hint: 'Leave blank for unlimited'
         = ff.link_to_remove "Remove this question"
       = f.link_to_add 'Add a question', :questions, class: [:button, :small, :secondary]
       
