hid the black side links

--- a/app/assets/themes/bioart/stylesheets/homepage.css.scss
+++ b/app/assets/themes/bioart/stylesheets/homepage.css.scss
@@ -146,6 +146,7 @@
       }
     }
     .side_links {
+      display: none;
       position: relative;
       left: 96%;
       margin-top: -12%;
@@ -213,6 +214,7 @@
     }
 
     .side_links {
+      display: none;
       position: relative;
       left: 96%;
       margin-top: -6%;
@@ -342,6 +344,7 @@
       }
     }
     .side_links {
+      display: none;
       position: relative;
       left: 96%;
       margin-top: -16%;
