--- a/app/assets/themes/bioart/stylesheets/base.css.scss
+++ b/app/assets/themes/bioart/stylesheets/base.css.scss
@@ -5,7 +5,7 @@ header {
   background-color: $headerblue;
   .pattern {
     background: url(/assets/bioart/images/layout/green_dots_S.png) repeat;
-    min-height: 13.813em;
+    max-height: 11.25em;
     padding: 3.125em 0;
     @include breakpoint(small only) {
         padding: 3.125em 0 0;
@@ -64,6 +64,8 @@ footer {
 
     input[type=text] {
       float: left;
+      outline: none;
+      border: none;
       padding-left: 20px;
       background:  url(/assets/bioart/images/layout/mag_glass.png) no-repeat 2px center , url(/assets/bioart/images/layout/menubar_arrow_blk.png) no-repeat right center #66ffcc;
     }
