--- a/app/assets/themes/bioart/stylesheets/pages.css.scss
+++ b/app/assets/themes/bioart/stylesheets/pages.css.scss
@@ -6,7 +6,7 @@
   min-height: 600px;
   .heading {
     background-color: $headerblue;
-    font-size: 5.625rem;
+    font-size: 4.375em;
     @include breakpoint(small only) {
       font-size: 3.4rem;
     }
@@ -59,31 +59,32 @@
         line-height: 1.8rem;
       }
     }
-    .side_links {
-      position: relative;
-      left: 96%;
-      margin-top: -12%;
-      @include breakpoint(small only) {
-        left: initial;
-        margin-top: initial;
-      }
-      .side_link {
-        float: left;
-        clear: both;
-        margin-bottom: 1em;
-        background-color: #000;
-        background: black url(/assets/bioart/images/layout/menubar_arrow.png)  0.4em no-repeat;
-
-        padding: 1em 0.7em 1em 2em;
-        a {
-          text-transform: uppercase;
-          color: #C5C5C5;
-          &:hover {
-            color: #FFF;
-          }
+//    .side_links {
+//      display: none;
+//      position: relative;
+//      left: 96%;
+//      margin-top: -12%;
+//      @include breakpoint(small only) {
+//        left: initial;
+//        margin-top: initial;
+//      }
+    .side_link {
+      float: left;
+      clear: both;
+      margin-bottom: 1em;
+      background-color: #000;
+      background: white url(/assets/bioart/images/layout/menubar_arrow_blk.png)  0.4em no-repeat;
+      border: 1px solid #C5C5C5;
+      padding: 0.4em 0.4em 0.4em 2em;
+      a {
+        text-transform: uppercase;
+        color: #C5C5C5;
+        &:hover {
+          color: #FFF;
         }
       }
     }
+//    }
   }
   
   .member_row_header {
@@ -100,8 +101,8 @@
       margin-bottom: 2.2rem;
       .title {
         font-family: $abel;
-        font-size: 2.125rem;
-        line-height: 2.475rem;
+        font-size: 1.75rem;
+        line-height: 2.275rem;
         font-weight: bold;
         margin-bottom: 1em;
         a {
@@ -110,9 +111,9 @@
       }
       .excerpt, .excerpt p {
         font-family: $titillium;
-        font-size: 1.3rem;
+        font-size: 1.125rem;
         font-weight: bold;
-        line-height: 1.85rem;
+        line-height: 1.6rem;
       }
     }
   }
@@ -120,6 +121,10 @@
   .staff_box {
     margin-top: 3rem;
     .excerpt {
+      h3 {
+        font-family: $abel;
+        font-size: 1.750em;
+      }
       ul {
         li {
           font-family: $titillium;
