projects index page

--- a/app/views/themes/bioart/layouts/application.html.haml
+++ b/app/views/themes/bioart/layouts/application.html.haml
@@ -34,7 +34,7 @@
                 %li= link_to 'News', posts_path
                 %li= link_to 'About', '/about'
                 %li= link_to 'ARS Bioarctica', page_path('ars-bioarctica')
-                %li= link_to 'Projects', '#'
+                %li= link_to 'Projects', projects_path
                 %li= link_to 'Contact', page_path('contact')
     = yield
     %footer= render partial: 'layouts/footer'
