--- a/app/assets/themes/bioart/stylesheets/application.css.scss
+++ b/app/assets/themes/bioart/stylesheets/application.css.scss
@@ -16,6 +16,7 @@
  *= require bioart/stylesheets/homepage
  *= require bioart/stylesheets/pages
  *= require bioart/stylesheets/opencall
+*= require bioart/stylesheets/projects
  *= require bioart/stylesheets/posts
  *= require slick
  *= require jquery-ui
