--- a/app/views/themes/bioart/layouts/_footer.html.haml
+++ b/app/views/themes/bioart/layouts/_footer.html.haml
@@ -1,7 +1,15 @@
 .row
-  .small-6.medium-2.columns
-    Bioart society address here?
-  .small-6.columns.medium-7 &nbsp;
+  .small-6.medium-6.columns
+    .address
+      %p
+        %strong Office and postal address
+      %p
+        Suomen Biotaiteen Seura ry / Finnish Bioart Society
+        %br/
+        Kaasutehtaankatu 1
+        %br/
+        FI-00540 Helsinki
+  .small-6.columns.medium-3 &nbsp;
   .small-7.medium-3.columns
     .form
       = form_tag '/search' do
