--- a/app/views/themes/bioart/admin/pages/_form.html.haml
+++ b/app/views/themes/bioart/admin/pages/_form.html.haml
@@ -13,7 +13,8 @@
     .large-5.small-12.columns= f.input :parent
   .row
     .large-5.small-12.columns= f.input :title
-    
+  .row
+    .large-5.small-12.columns= f.input :is_project_overview, as: :boolean    
   .row
     .large-8.small-12.columns= f.input :body, as: :text, input_html: {class: :ckeditor}
   .row
