--- a/app/views/themes/bioart/admin/projects/_form.html.haml
+++ b/app/views/themes/bioart/admin/projects/_form.html.haml
@@ -13,6 +13,8 @@
   .small-10.medium-6.columns
     = f.input :name
   .small-10.medium-6.columns
+    = f.input :subtitle
+  .small-10.medium-6.columns
     = f.text_area :description
   .small-10.medium-6.columns
     = f.input :image
