--- a/app/views/themes/bioart/posts/index.html.haml
+++ b/app/views/themes/bioart/posts/index.html.haml
@@ -1,7 +1,16 @@
-.posts_index
-  .row
-    .small-10.small-centered.medium-12.columns.section_title
-      News
+.posts_index{class: @project.nil? ? false : :project_detail}
+
+  - if @project
+    .row
+      .small-12.columns
+        %h1.project_title= link_to @project.name, @project
+        %h3.project_subtitle Blog
+    .row
+      .small-12.columns= render partial: 'shared/project_menu'
+  - else
+    .row
+      .small-10.small-centered.medium-12.columns.section_title
+        News
   .row.small-up-1.medium-up-2.large-up-3#results= render partial: 'postspage'
  
 
