--- a/app/views/themes/bioart/projects/show.html.haml
+++ b/app/views/themes/bioart/projects/show.html.haml
@@ -5,16 +5,8 @@
       %h3.project_subtitle= @project.subtitle
       
   .row
-    .small-12.columns 
-      - lastslug = ''
-      %ul.horizontal.menu.project_menu
-        - @project.pages.roots.each do |page|
-          - if lastslug =~ /^about/
-            %li= link_to 'blog', posts_path
-            - lastslug = 'foo'
-          - else
-            %li= link_to page.title, page
-            - lastslug = page.slug
+    .small-12.columns= render partial: 'shared/project_menu'
+
             
   .row
     .small-12.columns.project_indented
@@ -27,17 +19,16 @@
             
       - unless @project.posts.empty?
         .blog_container
-          .red Blog
-          .row.small-up-1.medium-up-3.xxlarge-up-4.post_carousel
+          .red= link_to 'Blog', project_posts_path(@project)
+          .row.small-up-1.medium-up-2.large-up-3.xxlarge-up-4.post_carousel
             - @project.posts.each do |post|
               = link_to post, class: [:post, :columns] do
-
                 .post_image{style: "background: url(#{post.photos.empty? ? theme_image_path('placeholder.png') : post.photos.first.image.url(:box).gsub('development', 'production')}) center/cover no-repeat"}
                   -#.hashtag
                   -#  = "##{post.node.name}"
                 .post_content
-                  .title= post.title
-                  .excerpt= truncate_html(sanitize(post.body, tags: %w{b strong bold i italic em u underline br}), length: 150)
+                  .title= truncate_html(post.title, length: 40)
+                  .excerpt= truncate_html(sanitize(post.body, tags: %w{b strong bold i italic em u underline }), length: 150)
         = content_for :jquery do
           :plain
             $('.post_carousel').slick({infinite: true,
@@ -60,6 +51,35 @@
                         slidesToShow: 1,
                         slidesToScroll: 1
                       }
+                  },
+                  {
+                    breakpoint: 767,
+                    settings: {
+                      autoplay: true,
+                      autoplaySpeed: 3000,
+                      slidesToShow: 2,
+                      slidesToScroll: 1
+                    }
                   }
                 ]
               });;
+      - @project.pages.roots.each do |page|
+        - next if page.is_project_overview == true
+        .text_box{class: page.children.empty? ? false : :has_children}
+          .red= link_to page.title, page
+          - if page.children.empty?
+            .body
+              - if page.excerpt.blank?
+                = raw page.excerpt
+              - else
+                = raw page.body
+            - if page.image?
+              .image= image_tag page  .image.url
+          - else
+            .row.small-up-1.medium-up-2.large-up-3.xxlarge-up-4.page_children
+              - page.children.each do |child|
+                = link_to child, class: [:page, :columns] do
+                  .page_image{style: "background: url(#{child.photos.empty? ? @project.image.url : child.photos.first.image.url(:box).gsub('development', 'production')}) center/cover no-repeat"}
+                  .page_content
+                    .title= child.title
+                    .excerpt= truncate_html(sanitize(child.body, tags: %w{b strong bold i italic em u underline br}), length: 150)
