--- a/app/views/themes/bioart/admin/partners/_form.html.haml
+++ b/app/views/themes/bioart/admin/partners/_form.html.haml
@@ -7,6 +7,8 @@
           - @partner.errors.full_messages.each do |msg|
             %li= msg
   .row
+    .large-5.small-12.columns= f.input :node, input_html: {required: ''}            
+  .row
     .large-5.small-12.columns= f.input :name, input_html: {required: ''}
   .row
     .large-5.small-12.columns= f.input :website
