--- a/app/views/themes/bioart/layouts/application.html.haml
+++ b/app/views/themes/bioart/layouts/application.html.haml
@@ -33,9 +33,10 @@
               %ul.horizontal.menu
                 %li= link_to 'News', posts_path
                 %li= link_to 'About', '/about'
+                %li= link_to 'Activities', activities_path
                 %li= link_to 'ARS Bioarctica', page_path('ars-bioarctica')
                 %li= link_to 'Projects', projects_path
-                %li= link_to 'Contact', page_path('contact')
+                -#%li= link_to 'Contact', page_path('contact')
     = yield
     %footer{style: @project.nil? ? '' : "background: #{@project.custom_background_colour} url(#{@project.custom_background_image.url}) repeat;" }= render partial: 'layouts/footer'
 
