--- a/app/views/themes/bioart/admin/activities/_form.html.haml
+++ b/app/views/themes/bioart/admin/activities/_form.html.haml
@@ -11,6 +11,8 @@
   .row
     .small-12.large-8.columns= f.input :name, input_html: {:required => ''}
   .row
+    .small-12.large-8.columns= f.input :location, input_html: {:required => ''}    
+  .row
     .small-12.large-8.columns= f.input :activitytype, input_html: {:required => ''}
   .row
     .small-12.large-8.columns= f.input :place_slug, label: 'Slug for exhibition URL'
