--- a/app/views/themes/bioart/activities/_activitiespage.html.haml
+++ b/app/views/themes/bioart/activities/_activitiespage.html.haml
@@ -1,7 +1,7 @@
 
 - @activities.reverse.each do |activity|
   .activity.column
-    .activity_image{style: "background: url(#{activity.photos.empty? ? theme_image_path('placeholder.png') : activity.photos.first.image.url(:box).gsub('development', 'production')}) center/cover no-repeat"}
+    .activity_image{style: "background: url(#{activity.photos.empty? ? theme_image_path('placeholder.png') : activity.photos.first.image.url(:box)}) center/cover no-repeat"}
       - if @project
         .hashtag
           = "##{@project.name}"
