--- a/app/views/themes/bioart/activities/index.html.haml
+++ b/app/views/themes/bioart/activities/index.html.haml
@@ -1,5 +1,7 @@
 .activities_index{class: @project.nil? ? false : :project_detail}
 
-  .red Activities
+  .row
+    .small-12.columns
+      .red Activities
   .row.small-up-1.medium-up-2.large-up-3#results= render partial: 'activitiespage'
  
