searches and indexing

--- a/app/assets/themes/bioart/stylesheets/application.css.scss
+++ b/app/assets/themes/bioart/stylesheets/application.css.scss
@@ -19,6 +19,7 @@
  *= require bioart/stylesheets/projects
  *= require bioart/stylesheets/activities
  *= require bioart/stylesheets/posts
+ *= require bioart/stylesheets/searches
  *= require slick
  *= require jquery-ui
  */
