--- a/app/views/themes/bioart/layouts/_footer.html.haml
+++ b/app/views/themes/bioart/layouts/_footer.html.haml
@@ -13,7 +13,7 @@
   .small-7.medium-3.columns
     .form
       = form_tag '/search' do
-        = text_field_tag :searchterm, '', style: @project.nil? ? '' : "background: url(/assets/bioart/images/layout/mag_glass.png) no-repeat 2px center , url(/assets/bioart/images/layout/menubar_arrow_blk.png) no-repeat right center #{@project.custom_background_colour};"
+        = text_field_tag :searchterm, params[:searchterm], style: @project.nil? ? '' : "background: url(/assets/bioart/images/layout/mag_glass.png) no-repeat 2px center , url(/assets/bioart/images/layout/menubar_arrow_blk.png) no-repeat right center #{@project.custom_background_colour};"
     .icons.float-right
       .email= link_to image_tag(theme_image_path('layout/email_icon.png')), '#'
       .fb= link_to image_tag(theme_image_path('layout/fb_icon.png')), 'https://www.facebook.com/groups/bioartsociety/', target: :_blank
